# rust-dispatch

./: .travis.yml  Cargo.toml  README.md  travis_test.sh
examples/: main.rs
src/: blk.rs  data.rs  ffi.rs  future.rs  group.rs  io.rs  lib.rs  once.rs  proxy.rs  qos.rs  queue.rs  sem.rs  source.rs  time.rs
tests-ios/: prelude.rs
