[package]
name = "dispatch"
version = "0.1.3"
authors = ["Steven Sheldon"]

description = "Rust wrapper for Apple's Grand Central Dispatch."
keywords = ["gcd", "objective-c", "osx", "ios"]
readme = "README.md"
repository = "http://github.com/SSheldon/rust-dispatch"
documentation = "http://ssheldon.github.io/rust-objc/dispatch/"
license = "MIT"

exclude = [
  ".gitignore",
  ".travis.yml",
  "travis_install.sh",
  "travis_test.sh",
  "tests-ios/**",
]

[dependencies]
log = "0.4"
libc = "0.2"
block = "0.1"

[dev-dependencies]
pretty_env_logger = "0.2"
tempfile = "3.0"
